// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqAui dGSoGP"
>
  <li
    className="sc-fzqMdD hbkdUw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqMdD hbkdUw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqMdD hbkdUw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqAui dGSoGP"
>
  <li
    className="sc-fzqMdD kPknPw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqMdD kPknPw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqMdD kPknPw"
    onClick={[Function]}
  >
    <span
      className="sc-fznzOf ckUekB"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
